server/catkin_ws/logs/catkin_tools_prebuild/build.cmake.000.log
Not searching for unused variables given on the command line.
[36m--[0m The C compiler identification is GNU 9.4.0
[36m--[0m The CXX compiler identification is GNU 9.4.0
[36m--[0m Check for working C compiler: /usr/bin/cc
[36m--[0m Check for working C compiler: /usr/bin/cc -- works
[36m--[0m Detecting C compiler ABI info
[36m--[0m Detecting C compiler ABI info - done
[36m--[0m Detecting C compile features
[36m--[0m Detecting C compile features - done
[36m--[0m Check for working CXX compiler: /usr/bin/c++
[36m--[0m Check for working CXX compiler: /usr/bin/c++ -- works
[36m--[0m Detecting CXX compiler ABI info
[36m--[0m Detecting CXX compiler ABI info - done
[36m--[0m Detecting CXX compile features
[36m--[0m Detecting CXX compile features - done
[36m--[0m Using CATKIN_DEVEL_PREFIX: /home/waleed/Thesis/voice-jogger-main/voice-jogger-main/src/server/catkin_ws/devel/.private/catkin_tools_prebuild
[36m--[0m Using CMAKE_PREFIX_PATH: /home/waleed/catkin_ws/devel;/opt/ros/noetic
[36m--[0m This workspace overlays: /home/waleed/catkin_ws/devel;/opt/ros/noetic
[36m--[0m Found PythonInterp: /usr/bin/python3 (found suitable version "3.8.10", minimum required is "3")
[36m--[0m Using PYTHON_EXECUTABLE: /usr/bin/python3
[36m--[0m Using Debian Python package layout
[36m--[0m Found PY_em: /usr/lib/python3/dist-packages/em.py
[36m--[0m Using empy: /usr/lib/python3/dist-packages/em.py
[36m--[0m Using CATKIN_ENABLE_TESTING: ON
[36m--[0m Call enable_testing()
[36m--[0m Using CATKIN_TEST_RESULTS_DIR: /home/waleed/Thesis/voice-jogger-main/voice-jogger-main/src/server/catkin_ws/build/catkin_tools_prebuild/test_results
[36m--[0m Forcing gtest/gmock from source, though one was otherwise available.
[36m--[0m Found gtest sources under '/usr/src/googletest': gtests will be built
[36m--[0m Found gmock sources under '/usr/src/googletest': gmock will be built
[36m--[0m Found PythonInterp: /usr/bin/python3 (found version "3.8.10")
[36m--[0m Found Threads: TRUE
[36m--[0m Using Python nosetests: /usr/bin/nosetests3
[36m--[0m catkin 0.8.10
[36m--[0m BUILD_SHARED_LIBS is on
Traceback (most recent call last):
  File "/home/waleed/Thesis/voice-jogger-main/voice-jogger-main/src/server/catkin_ws/build/catkin_tools_prebuild/catkin_generated/generate_cached_setup.py", line 22, in <module>
    code = generate_environment_script('/home/waleed/Thesis/voice-jogger-main/voice-jogger-main/src/server/catkin_ws/devel/.private/catkin_tools_prebuild/env.sh')
  File "/opt/ros/noetic/lib/python3/dist-packages/catkin/environment_cache.py", line 63, in generate_environment_script
    env_after = ast.literal_eval(output.decode('utf8'))
  File "/usr/lib/python3.8/ast.py", line 59, in literal_eval
    node_or_string = parse(node_or_string, mode='eval')
  File "/usr/lib/python3.8/ast.py", line 47, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 1
    ROS_DISTRO was set to 'galactic' before. Please make sure that the environment does not mix paths from different distributions.
               ^
SyntaxError: invalid syntax
[31m[1mCMake Error[0m at /opt/ros/noetic/share/catkin/cmake/safe_execute_process.cmake:11 (message):
  execute_process(/usr/bin/python3
  "/home/waleed/Thesis/voice-jogger-main/voice-jogger-main/src/server/catkin_ws/build/catkin_tools_prebuild/catkin_generated/generate_cached_setup.py")
  returned error code 1
[36mCall Stack (most recent call first):[0m
  /opt/ros/noetic/share/catkin/cmake/all.cmake:208 (safe_execute_process)
  /opt/ros/noetic/share/catkin/cmake/catkinConfig.cmake:20 (include)
  CMakeLists.txt:4 (find_package)


[36m--[0m Configuring incomplete, errors occurred!
See also "/home/waleed/Thesis/voice-jogger-main/voice-jogger-main/src/server/catkin_ws/build/catkin_tools_prebuild/CMakeFiles/CMakeOutput.log".
See also "/home/waleed/Thesis/voice-jogger-main/voice-jogger-main/src/server/catkin_ws/build/catkin_tools_prebuild/CMakeFiles/CMakeError.log".
